customised page error functional

--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Profil{% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('css/profile-css.css') }}">{% endblock %}
+    <link rel="stylesheet" href="{{ asset('css/profile-style.css') }}">{% endblock %}
 {% block body %}
 {% include "fragments/_nav.html.twig" %}
 {#    <div class="row mt-4 text-center">#}
