--- a/templates/city/index.html.twig
+++ b/templates/city/index.html.twig
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 
-	<div class="container-fluid p-3">
+	<div class="container p-3">
 		<div class="row">
 			<div class="col-8 offset-2">
 				<div
