--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -81,8 +81,8 @@
 						{% endfor %}
 					</tbody>
 				</table>
-				{# Pagination controls #}
-				<div class="navigation">
+				{# Pagination Controls #}
+				<div class="pagination">
 					{{ knp_pagination_render(pagination) }}
 				</div>
 				<div class="d-flex justify-content-evenly align-self-center align-items-center my-3">
