manage back button functional

--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -76,7 +76,7 @@
         </div>
     </div>
     <div class="text-center">
-        <a class="btn btn-primary" href="{{ app.request.headers.get('referer') ?: path('app_main_index') }}">Retour</a>
+            <a class="btn btn-primary" href="{{ path('app_main_index') }}">Retour</a>
     </div>
     
 {% endblock %}
