--- a/templates/trip/_form.html.twig
+++ b/templates/trip/_form.html.twig
@@ -48,8 +48,11 @@
          <div class="col text-center">
             <button type="submit" class="btn btn-primary" name="action" value="publish">Publier</button>    
         </div>
+{#        <div class="col text-center">#}
+{#            <a href="{{ path('app_main_index') }}" class="btn btn-secondary">Annuler</a> #}
+{#        </div>#}
         <div class="col text-center">
-            <a href="{{ path('app_main_index') }}" class="btn btn-secondary">Annuler</a> 
+            <a class="btn btn-primary" href="{{ app.request.headers.get('referer') ?: path('app_main_index') }}">Annuler</a>
         </div>
     </div>
     
