--- a/templates/location/edit.html.twig
+++ b/templates/location/edit.html.twig
@@ -15,7 +15,7 @@
                 <i class="bi bi-arrow-left"></i> Retours
             </a></div>
             
-        <div>{{ include('location/_delete_form.html.twig') }}</div>
+{#        <div>{{ include('location/_delete_form.html.twig') }}</div>#}
         
     </div>
 {% endblock %}
