--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -16,7 +16,8 @@
     </div>
 </div>
 <div class="text-center">
-    <a class="btn btn-primary" href="{{ path('app_profile_show', {'id': participant.id}) }}">Annuler</a>
+{#    <a class="btn btn-primary" href="{{ path('app_profile_show', {'id': participant.id}) }}">Annuler</a>#}
+    <a class="btn btn-primary" href="{{ app.request.headers.get('referer') ?: path('app_profile_show', {'id': participant.id}) }}">Retour</a>
 </div>
 
 
