--- a/templates/trip/edit.html.twig
+++ b/templates/trip/edit.html.twig
@@ -9,10 +9,7 @@
     </div>
     {{ include('trip/_form.html.twig', {'button_label': 'Update'}) }}
 
-{#    <a href="{{ path('app_trip_index') }}">back to list</a>#}
-
-    
-    <div class="text-center">
+    <div class="text-center mt-3">
             {{ include('trip/_delete_form.html.twig') }}
     </div>
     {% block javascripts %}
