--- a/templates/fragments/_nav.html.twig
+++ b/templates/fragments/_nav.html.twig
@@ -2,11 +2,8 @@
 	<div class="container-fluid">
 		<a class="navbar-brand" href="{{path('app_main_index')}}">
 			<img src="{{asset('images/logoSortir.png')}}" alt="Logo" width="60" class="d-inline-block align-text-center rounded">
-			Sortir.com
+			<span class="site-name">Sortir.com</span>
 		</a>
-		<!--  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-																														        <span class="navbar-toggler-icon"></span>
-																														        </button> -->
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
 			<span class="navbar-toggler-icon"></span>
 		</button>
