fix in activity

--- a/templates/main/_trips_tbody.html.twig
+++ b/templates/main/_trips_tbody.html.twig
@@ -11,7 +11,7 @@
 				<span class="badge bg-success">Ouvert</span>
 			{% elseif trip.state.label == 'closed' %}
 				<span class="badge bg-danger">Fermé</span>
-			{% elseif trip.state.label == 'in progress' %}
+			{% elseif trip.state.label == 'activity in progress' %}
 				<span class="badge bg-info">En cours</span>
 			{% elseif trip.state.label == 'passed' %}
 				<span class="badge bg-secondary">Terminé</span>
