--- a/templates/trip/index.html.twig
+++ b/templates/trip/index.html.twig
@@ -32,12 +32,12 @@
 						<thead class="table-dark">
 							<tr>
 								<th>Id</th>
-								<th>Name</th>
+								<th>Nom</th>
 								<th>Date</th>
-								<th>Duration (hours)</th>
-								<th>Registration Limit</th>
-								<th>Max Participants</th>
-								<th>Details</th>
+								<th>Durée (heures)</th>
+								<th>Date limite d'inscription</th>
+								<th>Nombre de participant max</th>
+								<th>Détails</th>
 								<th>Actions</th>
 							</tr>
 						</thead>
